# Entativa

./: README.md  a.py  b.py  c.py  d.py  e.py
Sonet-iOS/Sonet-iOS/App/: AppState.swift  SonetApp.swift
Sonet-iOS/Sonet-iOS/Core/DependencyInjection/: DIContainer.swift
Sonet-iOS/Sonet-iOS/Core/Network/: APIEndpoint.swift  NetworkClient.swift
dahlia-backend/: .gitignore  Makefile  README.md
dahlia-backend/docs/: api.md  architecture.md
dahlia-backend/infra/docker-compose/: docker-compose.yml
dahlia-backend/protos/: auth.proto  post.proto  user.proto
dahlia-backend/scripts/: build-all.sh  generate-protos.sh
dahlia-backend/services/kotlin/: build.gradle.kts  settings.gradle.kts
dahlia-kmp/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
dahlia-kmp/composeApp/: build.gradle.kts
dahlia-kmp/gradle/: libs.versions.toml
dahlia-kmp/shared/: build.gradle.kts
sonet-backend/: .gitignore  Makefile  README.md
sonet-backend/docs/architecture/: overview.md
sonet-backend/docs/deployment/: local-setup.md
sonet-backend/infra/docker-compose/: docker-compose.yml
sonet-backend/protos/: boo.proto  feed.proto  user.proto
sonet-backend/scripts/: build-all.sh  generate-protos.sh
sonet-backend/services/rust/: Cargo.toml
sonet-backend/services/rust/feed-service/: Cargo.toml  Dockerfile  README.md
sonet-backend/services/swift/: build-all.sh
sonet-kmp/: build.gradle.kts  gradle.properties  settings.gradle.kts
sonet-kmp/composeApp/: build.gradle.kts
sonet-kmp/gradle/: libs.versions.toml
sonet-kmp/shared/: build.gradle.kts
(+110 files in other folders)
